# bindings-freetype-gl

./: .ghci  .gitignore  .gitmodules  Setup.hs  bindings-freetype-gl.cabal  prepare_submodule.sh  stack.yaml
.github/workflows/: ci.yml
Bindings/FreetypeGL/: FontManager.hsc  Markup.hsc  Mat4.hsc  Paths.hs  Shader.hsc  Shaders.hs  TextBuffer.hsc  TextureAtlas.hsc  TextureFont.hsc  Vec234.hsc  Vector.hsc  VertexBuffer.hsc
Bindings/GLEW/: Init.hsc
cbits/: wrappers.c
shaders/: distance-field.vert
windows/GL/: glew.h  wglew.h
