cabal-version:       2.4
name:                bindings-freetype-gl
version:             0.1.0.0
synopsis:            Haskell bindings and embedding of freetype-gl
homepage:            https://github.com/Peaker/bindings-freetype-gl#readme
description:         Low-level haskell bindings for the freetype-gl library
license:             BSD-3-Clause
license-file:        LICENSE
author:              Eyal Lotem
maintainer:          eyal.lotem@gmail.com
copyright:           2016 Eyal Lotem
category:            Graphics, Fonts, Bindings
build-type:          Custom
extra-source-files:  windows/glew.c
                     windows/GL/glew.h
                     windows/GL/wglew.h
                     freetype-gl/font-manager.h
                     freetype-gl/markup.h
                     freetype-gl/opengl.h
                     freetype-gl/text-buffer.h
                     freetype-gl/texture-atlas.h
                     freetype-gl/texture-font.h
                     freetype-gl/utf8-utils.h
                     freetype-gl/vec234.h
                     freetype-gl/vector.h
                     freetype-gl/vertex-attribute.h
                     freetype-gl/vertex-buffer.h

custom-setup
  setup-depends:
                 base  >= 4.5
               , Cabal >= 2.4

library
  exposed-modules:     Bindings.FreetypeGL.FontManager
                     , Bindings.FreetypeGL.Markup
                     , Bindings.FreetypeGL.Shaders
                     , Bindings.FreetypeGL.TextBuffer
                     , Bindings.FreetypeGL.TextureAtlas
                     , Bindings.FreetypeGL.TextureFont
                     , Bindings.FreetypeGL.Vec234
                     , Bindings.FreetypeGL.Vector
                     , Bindings.FreetypeGL.VertexBuffer
  if !os(osx)
    exposed-modules:   Bindings.GLEW.Init
  autogen-modules:     Paths_bindings_freetype_gl
  other-modules:       Paths_bindings_freetype_gl
  build-depends:       base >= 4.7 && < 5
                     , bindings-DSL == 1.0.*
                     , freetype2 >= 0.2
                     , bytestring
                     , file-embed
  default-language:    Haskell2010
  if !os(osx) && !os(windows)
    extra-libraries:     GLEW
  ghc-options:         -Wall
  include-dirs:        freetype-gl/
  cc-options:          -g -Wall

  c-sources:           freetype-gl/texture-atlas.c
                     , freetype-gl/texture-font.c
                     , freetype-gl/text-buffer.c
                     , freetype-gl/font-manager.c
                     , freetype-gl/distance-field.c
                     , freetype-gl/edtaa3func.c
                     , freetype-gl/vector.c
                     , freetype-gl/utf8-utils.c
                     , freetype-gl/vertex-buffer.c
                     , freetype-gl/vertex-attribute.c
                     , freetype-gl/platform.c
                     , cbits/wrappers.c

  if os(windows)
    c-sources:       windows/glew.c
    cc-options:      -Wno-attributes -DGLEW_STATIC
    cpp-options:     -DGLEW_STATIC
    include-dirs:    windows/
                   , windows/GL

source-repository head
  type:     git
  location: https://github.com/Peaker/bindings-freetype-gl
